--- a/_doc/sphinxdoc/source/lectures/2018.rst
+++ b/_doc/sphinxdoc/source/lectures/2018.rst
@@ -11,3 +11,98 @@
     Our civilisation is being sacrificied for the opportunity of a
     very small number of people to continue making enormous amount
     of money.
+
+.. quote::
+    :author: Noah Chomsky
+    :book: Le profit avant l'Homme
+    :year: 2018
+    :index: ALENA, ZLEA
+    :pages: 44
+
+    Au Mexique, les conséquences [de l'ALENA] étaient particulièrement graves,
+    surtout pour le Sud. Depuis l'imposition dans les annes 1980,
+    des programmes néo-libéraux, les salaires avait fortement baissé. La chute s'est
+    poursuivie après la signature de l'ALENA : les travailleurs salariés ont subi
+    une perte de revenus de 24% - 40% pour les travailleurs indépendants -, effet
+    encore amplifié par l'augmentation rapide du nombre des travailleurs non salariés.
+    Les investissements étrangers se sont accrus, mais le total des investissements a diminué,
+    tandis que l'économie passait aux mains des multinationales étrangères. Le salaire minimum
+    a perdu la moitié de son pouvoir d'achat. La production manufacturière a baissé,
+    le développement a stagné - peut-être même s'est-il inversé. Mais une mince
+    couche sociale est devenue extrêmement riche, et les investisseurs étrangers
+    ont prospéré.
+
+    [...]
+
+    Tout cela avait été prédit par les critiques de l'ALENA, notamment par l'OTA
+    et les syndicats. Ils s'étaient seulement trompés sur un point précis.
+    La plupart d'entre eux s'attendaient à un fort exode rural,
+    des centaines de milliers de paysans étant chassés des campagnes,
+    mais il ne s'est pas produit. Il semble que les choses se soient
+    aggravées à ce point que dans les villes, en partie pour se diriger
+    vers les Etats-Unis. Ceux qui survivent - pas tous - au franchissement clandestin
+    de la frontière y travailleront pour des salaires très faibles et dans
+    des conditions épuvantables. La conséquences de tout cela, ce sont des
+    vies et des communautés détruites au Mexique, tandis que l'économie
+    américaine en profite : comme le souligne l'étude du
+    Woodrow Wilson Center, *la consommation des classes moyennes urbaines
+    continues à être financée par l'appauvrissement des travailleurs agricoles,
+    au Mexique comme au Etats-Unis.*
+
+    Tels sont les coûts de l'ALENA, et plus généralement de la mondialisation
+    néo-libérale, que les économistes préfèrent souvent ne pas évaluer.
+    Mais même au en utilisant des normes de calcul fortement idéologisées,
+    on constate qu'ils sont très élevés.
+
+    Aucune de ces observations ne fut autorisée, lors du sommet, à gâcher
+    la célébration de l'ALENA et de la ZLEA. Dans leur grande majorité,
+    les gens ne connaissent ce ces questions que ce qui se rapporte
+    à leur propre existence, à moins qu'ils ne soient en contact avec
+    des organisations militantes. La presse libre les protégeant avec
+    soin de la réalité, beaucoup d'entre eux ont l'impression d'être ratés,
+    incapables de prendre part au plus grand bonheur économique de l'Histoire.
+
+.. quote::
+    :author: Noah Chomsky
+    :book: Le profit avant l'Homme
+    :year: 2018
+    :index: démocratie
+    :pages: 50
+
+    Ce qui reste de la démocratie doit être désormais considéré
+    comme le droit de choisir entre des marchandises.
+
+.. quote::
+    :author: Noah Chomsky
+    :book: Le profit avant l'Homme
+    :year: 2018
+    :index: démocratie
+    :pages: 83
+
+    On connaît bien l'éloge qu'Adam Smith fait de la division du travail,
+    mais beaucoup moins sa dénonciation de ses effets déshumanisants,
+    qui transforment les travailleurs en objets *aussi stupides et ignorants
+    qu'il est possible à une créature humaine de l'être.* C'est là
+    quelque chose qu'il faut empêcher *dans toute société
+    civilisée et développée* par une action de l'Etat,
+    afin de surmonter la force destructrice de la fameuse
+    *main invisible.* On ignore également que Smith pensait qu'une sorte de
+    régulation d'Etat *en faveur des travailleurs est toujours juste et
+    équitables,* mais pas *quand elle est en faveur des maîtres* ;
+    de même que son appel à l'égalité de conditions, qui était au coeur
+    de son plaidoyer pour la liberté des marchés.
+
+    Un autre penseur majeur du panthéon libéral allait encore plus loin.
+    Wilhem won Humboldt condamnait le travail salarié en soi : quand le
+    travailleur est soumis à un contrôle extérieur, écrivait--il,
+    *nous pouvons admirer ce qu'il fait, mais nous méprisons ce qu'il est.
+    L'art progresse, l'artisan recule.*, observait Alexis de Tocqueville,
+    autre grande figure du libéralisme. Comme Smith et Jefferson, il pensait
+    que l'égalité de conditions était une importante caractéristique
+    d'une société juste et libre. Voilà cent soixante-ans, il mettait en garde
+    contre les dangers d'une *permanente inégalité des conditions.* Il
+    redoutait que ne sonne le glas de la démocratie si *l'aristocratie
+    manufacturière que nous voyons s'élever sous nos yeux* aux Etats-Unis,
+    *l'une des plus dures qui ait jamais existé au monde,* sortait
+    de ses frontières - comme elle le fit plus tard, dépassant de loin
+    ses pires cauchemars.
