--- a/_doc/sphinxdoc/source/lectures/2018.rst
+++ b/_doc/sphinxdoc/source/lectures/2018.rst
@@ -188,3 +188,16 @@
     rendre au gouvernement haïtien 160.000 pages de documents saisis par
     les troupes américaines, pour *éviter d'embarrassantes révélations*
     sur la complicité des Etats-Unis avec les auteurs du coup d'Etat.
+
+.. quote::
+    :author: Anne Cofell Saunders, Jane Espenson
+    :book: Battlestar Gallactica
+    :year: 2007
+    :index: démocratie
+    :pages: épisode S3
+    :link: https://fr.wikipedia.org/wiki/Saison_3_de_Battlestar_Galactica#Gr%C3%A8ve_g%C3%A9n%C3%A9rale
+
+    Quand le carburant coule, mes coups de fil sont sans effets,
+    en revanche, à la minute où il y a un ennui pour fournir le carburant,
+    j'arrive à avoir un entretien dans la minute avec la présidente et l'amiral.
+    Peut-être qu'on devrait se décider à avoir plus d'ennuis à l'avenir.
