--- a/_doc/sphinxdoc/source/lectures/2019.rst
+++ b/_doc/sphinxdoc/source/lectures/2019.rst
@@ -188,3 +188,44 @@
     comme dans la paix, toute décision qui contribue au destin
     du monde et du sien, toute responsabilité historique et
     sociale.
+
+.. quote::
+    :author: B. Amengal, J. A. Gili, M. Latil-Le Dantec, M. Mesnil, F. Piéri, V. Pinel, D. Rocher, C. Viviani
+    :book: Etudes cinématographiques: Federico Fellini
+    :year: 1981
+    :pages: 21
+    :index: création artistique
+    
+    [Fellini] Vous savez comment on fait une création artistique,
+    même à un niveau enfantin et ingénu comme l'était celui
+    du *Marc' Aurelio* ? Une création n'est jamais inventée et 
+    n'est jamais vraie. Elle est, d'abord et avant tout, elle-même.
+    Quelle idée de vouloir savoir si les récits sont inventés ?
+    De quel point de vue ? Bien sûr qu'ils sont vrais. Pour la 
+    simple raison qu'ils sont inventés, ils deviennent plus vrais
+    que n'importe quelle réalité.
+    
+.. quote::
+    :author: B. Amengal, J. A. Gili, M. Latil-Le Dantec, M. Mesnil, F. Piéri, V. Pinel, D. Rocher, C. Viviani
+    :book: Etudes cinématographiques: Federico Fellini
+    :year: 1981
+    :pages: 45
+    :index: création artistique
+    
+    La vérité captée par l'objectif est une vérité morte si
+    l'imagination de l'homme ne vient pas la féconder, lui
+    donner un sens.
+
+.. quote::
+    :author: B. Amengal, J. A. Gili, M. Latil-Le Dantec, M. Mesnil, F. Piéri, V. Pinel, D. Rocher, C. Viviani
+    :book: Etudes cinématographiques: Federico Fellini
+    :year: 1981
+    :pages: 67
+    :index: photographie
+    
+    La photographie nie le mouvement. Ou plutôt elle se l'approprie et 
+    le fixe définitivement. Fellini nous le prouve par un procédé très simple :
+    lorsqu'il fige les jeunes couples qui dansent un peu gauchement devant
+    le grand hôtel. Précisément, parce qu'ils sont figés, ils danseront toujours.
+    
+    
